--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
-    "sass": "^1.52.0",
-    "sass-loader": "^10.2.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
+    "node-sass": "^8.0.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^10.4.1"
+  }
 }
