--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
-    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
@@ -19,11 +18,15 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vuex": "^4.0.2",
+    "vuex": "^2.0.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^10.4.1"
