--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
+    "mongoose": "^7.0.2",
     "nuxt": "^2.15.8",
     "swiper": "^5.4.5",
     "vue": "^2.6.14",
